Correct body padding on small screens

--- a/src/styles/elements/_elements.page.scss
+++ b/src/styles/elements/_elements.page.scss
@@ -23,6 +23,6 @@ body {
     padding-top: $header-height;
 
     @include mq($until: ($tweakpoint-nav-primary - 1)) {
-        padding-bottom: $header-height;
+        padding-bottom: $nav-height;
     }
 }
